scoreを点数という記述に変更

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <body>
     <div id="app"></div>
-    <h1 id="number">score:0</h1>
+    <h1 id="number">点数:0</h1>
     <div id="main"></div>
     <script src="src/index.js"></script>
   </body>
